--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,23 @@
-#Learn more about Jenkins and JENKINS_HOME directory for which this file is intended.
-#  http://jenkins-ci.org/
-#  https://wiki.jenkins-ci.org/display/JENKINS/Administering+Jenkins
+# Compiled class file
+*.class
 
-#ignore all JENKINS_HOME except jobs directory, root xml config, and .gitignore file
-/*
-!/jobs
-!/.gitignore
-!/*.xml
+# Log file
+*.log
 
-#ignore all files in jobs subdirectories except for folders
-#note: git doesn't track folders, only file content
-jobs/**
-!jobs/**/
+# BlueJ files
+*.ctxt
 
-#uncomment the following line to save next build numbers with config
-#!jobs/**/nextBuildNumber
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
 
-#exclude only config.xml files in repository subdirectories
-!config.xml
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
 
-#don't track workspaces (when users build on the master)
-jobs/**/*workspace
-
-#as a result only settings and job config.xml files in JENKINS_HOME will be tracked by git
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
